horizontal scroll fixed

--- a/style.sass
+++ b/style.sass
@@ -90,8 +90,8 @@ body
 
 .main
     padding: 30px 0
-    width: 100vw
-    height: 100vh
+    width: 100%
+    min-height: 100vh
 
     &__header
         padding: 0 15px 0 50px
@@ -156,8 +156,8 @@ body
     background-color: $third_red
     // background: url("../icons/pngwing.com.png") 
     padding: 30px 0
-    width: 100vw
-    height: 100vh
+    width: 100%
+    min-height: 100vh
     &__header
 
         padding: 0 15px 0 50px
@@ -169,6 +169,7 @@ body
         background-color: $main_white
     &__wrapper
         margin-top: 50px
+        margin-bottom: 20px
         width: 100%
         display: flex
         justify-content: space-evenly
@@ -219,8 +220,8 @@ body
         bottom: 30px
 .example
     padding: 30px 0
-    width: 100vw
-    height: 100vh
+    width: 100%
+    min-height: 100vh
     &__wrapper
         margin-top: 50px
         display: flex
